fixed sidepaddings and added line-clamping to prevent texts from going out of bounds

--- a/resources/assets/css/partials/team-page.css
+++ b/resources/assets/css/partials/team-page.css
@@ -2,7 +2,7 @@
     @apply bg-white w-screen;
 
     .header {
-        @apply py-4 px-2 md:px-8 lg:px-32 lg:pt-16;
+        @apply py-4 px-8 md:px-8 lg:px-32 lg:pt-16;
 
         h1 {
             @apply font-bold text-3xl lg:text-6xl text-ams-cyan leading-loose;
@@ -17,7 +17,7 @@
         2xl:gap-16
         auto-rows-fr
         lg:grid-cols-2
-        px-2
+        px-8
         md:px-8
         lg:px-32
         lg:py-16
@@ -68,7 +68,7 @@
                         }
 
                         &__text {
-                            @apply text-ams-text_light;
+                            @apply text-ams-text_light line-clamp-5 md:line-clamp-6;
 
                             h2 {
                                 @apply m-0 leading-loose text-2xl font-normal text-black;
